[gd_scene load_steps=3 format=3 uid="uid://bqvgcqqbx2r8h"]

[ext_resource type="Script" uid="uid://6qtki4eb0d3i" path="res://crawler.gd" id="1_vawpx"]
[ext_resource type="Texture2D" uid="uid://pquwcow4bbxr" path="res://jelly.png" id="2_3n7dr"]

[node name="crawler" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 11
script = ExtResource("1_vawpx")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 1)
polygon = PackedVector2Array(-6, -13, -6, -11, -10, -11, -10, -7, -12, -7, -12, 1, -10, 1, -10, 5, -12, 5, -12, 7, -12, 9, -12, 11, -10, 11, -10, 9, -8, 9, -8, 3, -6, 3, -6, 11, -4, 11, -4, 9, -2, 9, -2, 3, 2, 3, 2, 9, 4, 9, 4, 11, 6, 11, 6, 3, 8, 3, 8, 9, 10, 9, 10, 11, 12, 11, 12, 5, 10, 5, 10, 1, 12, 1, 12, -7, 10, -7, 10, -11, 6, -11, 6, -13)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
scale = Vector2(2, 2)
texture = ExtResource("2_3n7dr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
